🔄 synced local 'docs/cheatsheets' with remote 'cheatsheets'

--- a/docs/cheatsheets/宇宙関連.md
+++ b/docs/cheatsheets/宇宙関連.md
@@ -6,21 +6,27 @@ created: 2024-02-17 10:03:25
 
 [内閣府宇宙基本計画](https://www8.cao.go.jp/space/plan/keikaku.html)の工程表におそらく一番具体的な予定が書いてある。
 
-- イプシロンS
-	- 実証機：2024年度後半（年度なので2025年初頭かも）
-	- 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
-		- ⾰新的衛星技術実証 4号機（年度初頭）
-		- 深宇宙探査技術実証機(DESTINY+)（年度初頭）
-- H3
-	- 2024年度中に以下の衛星を打ち上げ予定
-		- ALOS‐4（だいち4号（！！！））（年度前半）
-		- Xバンド 技術試験衛星9号機 防衛通信衛星3号機（年度中盤）
-		- 準天頂衛星5号機（年度後半）
-- H-IIA
-	- 48号機　情報収集衛星光学8号機（2024/01/12打ち上げ済み）
-	- 49号機　情報収集衛星レーダ8号機（2024年度中）
-	- 50号機　温室効果ガス・⽔循環観測技術衛星（2024年度中）
-		- これにてH-IIAが運用終了（H3へ移行）
+### イプシロンS
+
+- 実証機：2024年度後半（年度なので2025年初頭かも）
+- 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
+	- ⾰新的衛星技術実証 4号機（年度初頭）
+	- 深宇宙探査技術実証機(DESTINY+)（年度初頭）
+
+### H3
+
+2024年度中に以下の衛星を打ち上げ予定
+
+- ALOS‐4（だいち4号（！！！））（年度前半）
+- Xバンド 技術試験衛星9号機 防衛通信衛星3号機（年度中盤）
+- 準天頂衛星5号機（年度後半）
+
+### H-IIA
+
+- 48号機　情報収集衛星光学8号機（2024/01/12打ち上げ済み）
+- 49号機　情報収集衛星レーダ8号機（2024年度中）
+- 50号機　温室効果ガス・⽔循環観測技術衛星（2024年度中）
+	- これにてH-IIAが運用終了（H3へ移行）
 
 ## ispace
 
