🔄 synced local 'docs' with remote 'cheatsheets'

--- a/docs/宇宙関連.md
+++ b/docs/宇宙関連.md
@@ -8,6 +8,9 @@ created: 2024-02-17 10:03:25
 
 ### イプシロンS
 
+- 2024年11月に燃焼試験で爆発を起こして遅延中？
+	- 2024年12月に「今年度内（~25年3月）の打ち上げは困難」と述べている
+	- 2024年12月改訂版の宇宙基本計画表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
 - 実証機：2024年度後半（年度なので2025年初頭かも）
 - 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
   - ⾰新的衛星技術実証 4号機（年度初頭）
