--- a/docs/宇宙関連.md
+++ b/docs/宇宙関連.md
@@ -10,27 +10,44 @@ created: 2024-02-17 10:03:25
 
 - 2024年11月に燃焼試験で爆発を起こして遅延中？
 	- 2024年12月に「今年度内（~25年3月）の打ち上げは困難」と述べている
-	- 2024年12月改訂版の宇宙基本計画表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
-- 実証機：2024年度後半（年度なので2025年初頭かも）
-- 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
-  - ⾰新的衛星技術実証 4号機（年度初頭）
-  - 深宇宙探査技術実証機(DESTINY+)（年度初頭）
-
+	- 2024年12月改訂版の宇宙基本計画工程表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
+- 2023年12月版時点での予定
+	- 実証機：2024年度後半（年度なので2025年初頭かも）
+	- 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
+		- ⾰新的衛星技術実証 4号機（年度初頭）
+		- 深宇宙探査技術実証機(DESTINY+)（年度初頭）
 ### H3
 
-2024年度中に以下の衛星を打ち上げ予定
+2025年度中に以下の衛星を打ち上げ予定
 
-- ALOS‐4（だいち4号（！！！））（年度前半）
-- Xバンド 技術試験衛星9号機 防衛通信衛星3号機（年度中盤）
-- 準天頂衛星5号機（年度後半）
+- 30形試験機
+- HTV-X 1号機打ち上げ
+- みちびき5号機打ち上げ
+- みちびき7号機打ち上げ
 
 ### H-IIA
 
 - 48号機　情報収集衛星光学8号機（2024/01/12打ち上げ済み）
-- 49号機　情報収集衛星レーダ8号機（2024年度中）
-- 50号機　温室効果ガス・⽔循環観測技術衛星（2024年度中）
+- 49号機　情報収集衛星レーダ8号機（2024/09/26打ち上げ済み）
+- 50号機　温室効果ガス・⽔循環観測技術衛星（~~2024年度中~~2025年度に延期）
   - これにてH-IIAが運用終了（H3へ移行）
 
 ## ispace
 
 [2024年3月期Q3決算説明会](https://youtu.be/LemTghDhmcw?si=rdrr55AN-9fTewHI&t=613)でMission2の最速が2024年冬（10-12月）であると説明された。
+
+- Mission 2進捗
+	- 2025/01/15
+		- Success2：打ち上げ及び分離
+			- SpaceX Falcon9ロケットによる
+		- Success3：安定した航行状態
+	- 2025/01/17
+		- Success4：初回軌道制御マヌーバ
+	- 今後
+		- Success5：月フライバイの完了
+			- 「打ち上げ約一ヶ月後」とあるので2月中旬？
+		- Success6：
+
+他予定
+- Mission3：2026年
+- Mission4：2027年
