🔄 synced local 'docs' with remote 'cheatsheets'

--- a/docs/宇宙関連.md
+++ b/docs/宇宙関連.md
@@ -46,7 +46,7 @@ created: 2024-02-17 10:03:25
 	- 今後
 		- Success5：月フライバイの完了
 			- 「打ち上げ約一ヶ月後」とあるので2月中旬？
-		- Success6：
+		- Success6
 
 他予定
 - Mission3：2026年
