--- a/docs/宇宙関連.md
+++ b/docs/宇宙関連.md
@@ -9,13 +9,13 @@ created: 2024-02-17 10:03:25
 ### イプシロンS
 
 - 2024年11月に燃焼試験で爆発を起こして遅延中？
-	- 2024年12月に「今年度内（~25年3月）の打ち上げは困難」と述べている
-	- 2024年12月改訂版の宇宙基本計画工程表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
+    - 2024年12月に「今年度内（~25年3月）の打ち上げは困難」と述べている
+    - 2024年12月改訂版の宇宙基本計画工程表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
 - 2023年12月版時点での予定
-	- 実証機：2024年度後半（年度なので2025年初頭かも）
-	- 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
-		- ⾰新的衛星技術実証 4号機（年度初頭）
-		- 深宇宙探査技術実証機(DESTINY+)（年度初頭）
+    - 実証機：2024年度後半（年度なので2025年初頭かも）
+    - 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
+        - ⾰新的衛星技術実証 4号機（年度初頭）
+        - 深宇宙探査技術実証機(DESTINY+)（年度初頭）
 ### H3
 
 2025年度中に以下の衛星を打ち上げ予定
@@ -37,16 +37,16 @@ created: 2024-02-17 10:03:25
 [2024年3月期Q3決算説明会](https://youtu.be/LemTghDhmcw?si=rdrr55AN-9fTewHI&t=613)でMission2の最速が2024年冬（10-12月）であると説明された。
 
 - Mission 2進捗
-	- 2025/01/15
-		- Success2：打ち上げ及び分離
-			- SpaceX Falcon9ロケットによる
-		- Success3：安定した航行状態
-	- 2025/01/17
-		- Success4：初回軌道制御マヌーバ
-	- 今後
-		- Success5：月フライバイの完了
-			- 「打ち上げ約一ヶ月後」とあるので2月中旬？
-		- Success6
+    - 2025/01/15
+        - Success2：打ち上げ及び分離
+            - SpaceX Falcon9ロケットによる
+        - Success3：安定した航行状態
+    - 2025/01/17
+        - Success4：初回軌道制御マヌーバ
+    - 今後
+        - Success5：月フライバイの完了
+            - 「打ち上げ約一ヶ月後」とあるので2月中旬？
+        - Success6：LOI 前全ての深宇宙軌道制御マヌーバの完了
 
 他予定
 - Mission3：2026年
