🔄 synced local 'docs' with remote 'cheatsheets'

--- a/docs/デバッグツール.md
+++ b/docs/デバッグツール.md
@@ -34,7 +34,7 @@ ldd a.out
 | `-d`  | 足りないオブジェクトを表示    |
 | `-r`  | 足りないオブジェクトと関数を表示 |
 | `-u`  | 未使用の依存関係を表示      |
-| `-v`  | 全ての情報を表示         |
+| `-v`  | すべての情報を表示         |
 
 ### lsof
 
