--- a/docs/メディア操作.md
+++ b/docs/メディア操作.md
@@ -37,7 +37,7 @@ sudo apt install imagemagick
 convert input.png output.pdf
 ```
 
-エラーが出る場合，`/etc/ImageMagick-6/policy.xml`を編集する．
+エラーが出る場合、`/etc/ImageMagick-6/policy.xml`を編集する。
 
 ```xml
 <policy domain="coder" rights="none" pattern="PDF" />
