--- a/docs/宇宙関連.md
+++ b/docs/宇宙関連.md
@@ -14,7 +14,7 @@ created: 2024-02-17 10:03:25
 - 2023年12月版時点での予定
   - 実証機：2024年度後半（年度なので2025年初頭かも）
   - 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
-    - ⾰新的衛星技術実証 4号機（年度初頭）
+    - 革新的衛星技術実証 4号機（年度初頭）
     - 深宇宙探査技術実証機(DESTINY+)（年度初頭）
 
 ### H3
@@ -30,7 +30,7 @@ created: 2024-02-17 10:03:25
 
 - 48号機　情報収集衛星光学8号機（2024/01/12打ち上げ済み）
 - 49号機　情報収集衛星レーダ8号機（2024/09/26打ち上げ済み）
-- 50号機　温室効果ガス・⽔循環観測技術衛星（~~2024年度中~~2025年度に延期）
+- 50号機　温室効果ガス・水循環観測技術衛星（~~2024年度中~~2025年度に延期）
   - これにてH-IIAが運用終了（H3へ移行）
 
 ## ispace
@@ -39,7 +39,7 @@ created: 2024-02-17 10:03:25
 
 - Mission 2進捗
   - 2025/01/15
-    - Success2：打ち上げ及び分離
+    - Success2：打ち上げおよび分離
       - SpaceX Falcon9ロケットによる
     - Success3：安定した航行状態
   - 2025/01/17
@@ -47,7 +47,7 @@ created: 2024-02-17 10:03:25
   - 今後
     - Success5：月フライバイの完了
       - 「打ち上げ約一ヶ月後」とあるので2月中旬？
-    - Success6：LOI 前全ての深宇宙軌道制御マヌーバの完了
+    - Success6：LOI 前すべての深宇宙軌道制御マヌーバの完了
 
 他予定
 
