--- a/docs/論文読み補助ツール.md
+++ b/docs/論文読み補助ツール.md
@@ -12,6 +12,8 @@ created: 2023-01-19 11:03:33
 
 日本語
 
+<!-- cspell:ignore Sangmin Explainpaper tweetdeck KAJI kajikent -->
+
 ### ar5iv
 
 arxiv.orgをar5iv.orgに書き換えるだけでHTMLになった論文を読める
