🔄 synced local 'docs' with remote 'cheatsheets'

--- a/docs/宇宙関連.md
+++ b/docs/宇宙関連.md
@@ -9,13 +9,13 @@ created: 2024-02-17 10:03:25
 ### イプシロンS
 
 - 2024年11月に燃焼試験で爆発を起こして遅延中？
-  - 2024年12月に「今年度内（~25年3月）の打ち上げは困難」と述べている
-  - 2024年12月改訂版の宇宙基本計画工程表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
+    - 2024年12月に「今年度内（~25年3月）の打ち上げは困難」と述べている
+    - 2024年12月改訂版の宇宙基本計画工程表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
 - 2023年12月版時点での予定
-  - 実証機：2024年度後半（年度なので2025年初頭かも）
+    - 実証機：2024年度後半（年度なので2025年初頭かも）
   - 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
-    - 革新的衛星技術実証 4号機（年度初頭）
-    - 深宇宙探査技術実証機(DESTINY+)（年度初頭）
+      - 革新的衛星技術実証 4号機（年度初頭）
+      - 深宇宙探査技術実証機(DESTINY+)（年度初頭）
 
 ### H3
 
@@ -31,23 +31,24 @@ created: 2024-02-17 10:03:25
 - 48号機　情報収集衛星光学8号機（2024/01/12打ち上げ済み）
 - 49号機　情報収集衛星レーダ8号機（2024/09/26打ち上げ済み）
 - 50号機　温室効果ガス・水循環観測技術衛星（~~2024年度中~~2025年度に延期）
-  - これにてH-IIAが運用終了（H3へ移行）
+    - これにてH-IIAが運用終了（H3へ移行）
 
 ## ispace
 
 [2024年3月期Q3決算説明会](https://youtu.be/LemTghDhmcw?si=rdrr55AN-9fTewHI&t=613)でMission2の最速が2024年冬（10-12月）であると説明された。
 
 - Mission 2進捗
-  - 2025/01/15
-    - Success2：打ち上げおよび分離
-      - SpaceX Falcon9ロケットによる
-    - Success3：安定した航行状態
-  - 2025/01/17
-    - Success4：初回軌道制御マヌーバ
-  - 今後
-    - Success5：月フライバイの完了
-      - 「打ち上げ約一ヶ月後」とあるので2月中旬？
-    - Success6：LOI 前すべての深宇宙軌道制御マヌーバの完了
+    - 2025/01/15
+        - Success2：打ち上げおよび分離
+        - SpaceX Falcon9ロケットによる
+        - Success3：安定した航行状態
+    - 2025/01/17
+        - Success4：初回軌道制御マヌーバ
+    - 2025/02/17
+        - Success5：月フライバイの完了
+    - 今後
+        - Success6：LOI 前すべての深宇宙軌道制御マヌーバの完了
+        - 2025/06/06 月着陸予定（）
 
 他予定
 
