🔄 synced local 'docs' with remote 'cheatsheets'

--- a/docs/宇宙関連.md
+++ b/docs/宇宙関連.md
@@ -1,56 +1,105 @@
 ---
+title: 宇宙関連
+category: Space
+layout: 2017/sheet
+tags: [宇宙, JAXA, 民間宇宙開発]
 created: 2024-02-17 10:03:25
+updated: 2025-06-28
+intro: 日本の宇宙開発の最新情報とスケジュール
 ---
 
-## JAXA
+## 参考情報源
 
-[内閣府宇宙基本計画](https://www8.cao.go.jp/space/plan/keikaku.html)の工程表におそらく一番具体的な予定が書いてある。
+### 公式計画・資料
+- **[内閣府宇宙基本計画](https://www8.cao.go.jp/space/plan/keikaku.html)** - 最も具体的な打ち上げスケジュール
+- **[JAXA公式サイト](https://www.jaxa.jp/)** - 最新の打ち上げ情報とプレスリリース
 
-### イプシロンS
+## JAXA（宇宙航空研究開発機構）
 
-- 2024年11月に燃焼試験で爆発を起こして遅延中？
-    - 2024年12月に「今年度内（~25年3月）の打ち上げは困難」と述べている
-    - 2024年12月改訂版の宇宙基本計画工程表では2028年の打ち上げ以前の打ち上げ予定が消され、調整と書かれている
-- 2023年12月版時点での予定
-    - 実証機：2024年度後半（年度なので2025年初頭かも）
-  - 2025年度に衛星2機打ち上げ予定（ロケットは1台？）
-      - 革新的衛星技術実証 4号機（年度初頭）
-      - 深宇宙探査技術実証機(DESTINY+)（年度初頭）
+### ロケット開発・運用状況
 
-### H3
+#### イプシロンS ロケット
+**⚠️ 開発遅延中**
 
-2025年度中に以下の衛星を打ち上げ予定
+##### 最新状況（2024年12月時点）
+- **2024年11月**: 燃焼試験で爆発事故発生
+- **2024年12月**: 今年度内（2025年3月まで）の打ち上げは困難と発表
+- **工程表更新**: 2028年以前の打ち上げ予定が削除され「調整中」に変更
 
-- 30形試験機
-- HTV-X 1号機打ち上げ
-- みちびき5号機打ち上げ
-- みちびき7号機打ち上げ
+##### 当初予定（2023年12月版）
+- **実証機**: 2024年度後半 → **延期**
+- **2025年度予定ミッション**:
+  - 革新的衛星技術実証4号機（年度初頭予定）
+  - 深宇宙探査技術実証機 DESTINY+（年度初頭予定）
 
-### H-IIA
+#### H3 ロケット
+**🚀 運用中（H-IIAの後継機）**
 
-- 48号機　情報収集衛星光学8号機（2024/01/12打ち上げ済み）
-- 49号機　情報収集衛星レーダ8号機（2024/09/26打ち上げ済み）
-- 50号機　温室効果ガス・水循環観測技術衛星（~~2024年度中~~2025年度に延期）
-    - これにてH-IIAが運用終了（H3へ移行）
+##### 2025年度打ち上げ予定
+- **30形試験機**
+- **HTV-X 1号機** - 国際宇宙ステーション補給機
+- **みちびき5号機** - 準天頂衛星システム
+- **みちびき7号機** - 準天頂衛星システム
 
-## ispace
+#### H-IIA ロケット
+**✅ 運用終了（H3へ移行完了）**
 
-[2024年3月期Q3決算説明会](https://youtu.be/LemTghDhmcw?si=rdrr55AN-9fTewHI&t=613)でMission2の最速が2024年冬（10-12月）であると説明された。
+##### 最終打ち上げ実績
+- **48号機**: 情報収集衛星光学8号機（2024/01/12 ✅完了）
+- **49号機**: 情報収集衛星レーダ8号機（2024/09/26 ✅完了）
+- **50号機**: 温室効果ガス・水循環観測技術衛星
+  - ~~2024年度中~~ → **2025年度に延期**
+  - これを最後にH-IIA運用終了
 
-- Mission 2進捗
-    - 2025/01/15
-        - Success2：打ち上げおよび分離
-        - SpaceX Falcon9ロケットによる
-        - Success3：安定した航行状態
-    - 2025/01/17
-        - Success4：初回軌道制御マヌーバ
-    - 2025/02/17
-        - Success5：月フライバイの完了
-    - 今後
-        - Success6：LOI 前すべての深宇宙軌道制御マヌーバの完了
-        - 2025/06/06 月着陸予定（）
+### 主要ミッション
 
-他予定
+#### 準天頂衛星システム（みちびき）
+- **目的**: 高精度測位サービス提供
+- **2025年度**: 5号機・7号機打ち上げ予定
 
-- Mission3：2026年
-- Mission4：2027年
+#### 国際宇宙ステーション計画
+- **HTV-X**: 新型補給機の運用開始（2025年度）
+
+#### 深宇宙探査
+- **DESTINY+**: 小惑星フェートン探査（イプシロンS遅延により延期）
+
+## 民間宇宙企業
+
+### ispace（アイスペース）
+**🌙 月面探査事業**
+
+#### Mission 2 - 月面着陸チャレンジ
+**🚀 進行中**
+
+##### 実績済みマイルストーン
+- **2025/01/15**: 
+  - ✅ Success2: 打ち上げ・分離成功（SpaceX Falcon9使用）
+  - ✅ Success3: 安定した航行状態達成
+- **2025/01/17**: 
+  - ✅ Success4: 初回軌道制御マヌーバ完了
+- **2025/02/17**: 
+  - ✅ Success5: 月フライバイ完了
+
+##### 今後の予定
+- **進行中**: Success6 - LOI前すべての深宇宙軌道制御マヌーバ完了
+- **2025/06/06**: 🎯 **月着陸予定日**
+
+#### 将来ミッション
+- **Mission 3**: 2026年予定
+- **Mission 4**: 2027年予定
+
+##### 参考資料
+- [2024年3月期Q3決算説明会](https://youtu.be/LemTghDhmcw?si=rdrr55AN-9fTewHI&t=613) - Mission2スケジュール説明
+
+## 最新動向まとめ
+
+### 2025年の注目ポイント
+1. **H3ロケット本格運用**: 複数ミッション予定
+2. **ispace Mission 2**: 日本初の月面着陸成功なるか
+3. **イプシロンS**: 事故からの復旧状況
+4. **H-IIA**: 最終打ち上げでシリーズ完結
+
+### 長期展望
+- **2026年**: ispace Mission 3
+- **2027年**: ispace Mission 4  
+- **2028年以降**: イプシロンS復活（予定）
